EXTZ-856: Use bannerSelfServiceCommonLTR/RTL modules as dependency to fix display issue. Add temporary fix in main.css for horizontal scrollbar issue in sghe_aurora plugin.

--- a/web-app/css/main.css
+++ b/web-app/css/main.css
@@ -604,3 +604,9 @@ ol {
     -moz-padding-start:25px;
     /*margin: 0 0 9px 0;*/
 }
+
+/* temporary fix for aurora-breadcrumb.css */
+
+#breadcrumb-panel, #title-panel {
+    padding-left: 0;
+}
